--- a/style.css
+++ b/style.css
@@ -1,22 +1,22 @@
 @font-face {
     font-family: 'Museo Sans Cyrl100';
-    src: url(/fonts/MuseoSansCyrl-100.ttf);
+    src: url(./fonts/MuseoSansCyrl-100.ttf);
     font-weight: 100;
     font-style: normal;
 }
 @font-face {
     font-family: 'Museo Sans Cyrl700';
-    src: url(/fonts/MuseoSansCyrl_2.otf);
+    src: url(./fonts/MuseoSansCyrl_2.otf);
     font-style: normal;
 }
 @font-face {
     font-family: 'Museo Sans Cyrl300';
-    src: url(/fonts/museo_sans_cyrl_300.ttf);
+    src: url(./fonts/museo_sans_cyrl_300.ttf);
     font-style: normal;
 }
 @font-face {
     font-family: 'Museo Sans Cyrl500';
-    src: url(/fonts/museo_sans_cyrl_500.ttf);
+    src: url(./fonts/museo_sans_cyrl_500.ttf);
     font-style: normal;
 }
 
@@ -258,6 +258,9 @@ a{
     color: #12171e;
     white-space: nowrap;
     margin-right: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .project-description{
